Various content work

--- a/Content/Topics/Attribute Management/Assigning Attributes to Variants.htm
+++ b/Content/Topics/Attribute Management/Assigning Attributes to Variants.htm
@@ -12,7 +12,7 @@
         <p>
             <img src="../../Resources/Images/Attribute Management/Variant Manager Document screen.png" class="LargeImages" />
         </p>
-        <p>Once a variant manager document is open, users can select variants in the grid section of the document. Details for the selected variants appear in the <span class="Emphasis">Variant</span> section. </p>
+        <p>Once a variant manager document is open, users can select variants in the upper grid. Details for the selected variants appear in the lower <span class="Emphasis">Variant</span> section. </p>
         <p>Users can work with a variety of aspects of variants within a variant manager document by clicking the appropriate tab. To assign or edit product attributes for selected variants, click the <span class="Emphasis">Variant Attribute Management</span> tab.</p>
         <p class="BasicNote">Both the upper and lower sections of the view can be displayed or hidden by clicking the corresponding <span class="Emphasis">Grid</span> and <span class="Emphasis">Details</span> buttons in the upper right of the view.</p>
         <h2>Variant Attribute Management tab</h2>
@@ -29,15 +29,15 @@
             <li><span class="Emphasis">Single Values</span>: The attribute value of the adjacent single-select attribute family for the selected variants. When variants are selected that have different attribute values assigned, this field shows <span class="Emphasis">(Multi)</span> to indicate this.</li>
             <li><span class="Emphasis">Multiple Values</span>: The attribute values of the adjacent multi-select attribute family for the selected variants. When multiple variants are selected that have different attribute values assigned, this field shows the combination of all values present.</li>
         </ul>
-        <h3>Data Population</h3>
+        <h3>Data population</h3>
         <p>The view populates with all attribute families that any of the selected variants is eligible for. Attribute values available for selection include all values that any of the selected variants is eligible for.</p>
-        <h3>Applying Changes Across Multiple Items</h3>
-        <p>When multiple variants are selected in the Grid section, any conflicts that exist between the applied values and the attribute value eligibility of the variants the change is being applied to are automatically resolved.</p>
+        <h3>Applying changes across multiple items</h3>
+        <p>When multiple variants are selected in the grid section, any conflicts that exist between the applied values and the attribute value eligibility of the variants the change is being applied to are automatically resolved.</p>
         <ul>
             <li>Single-select attribute value changes are applied to all variants that are eligible for them. Ineligible variants remain unchanged</li>
             <li>Multi-select attribute value changes are applied additively to variants that are eligible for them. If only some of the applied values are eligible, those will be applied. Ineligible variants remain unchanged</li>
         </ul>
-        <h3>Dual-directional Attribute Flow</h3>
+        <h3>Dual-directional attribute flow</h3>
         <p>Depending on where attributes are assigned (to placeholders in Assortment Planning or to variants in Variant Manager) attributes are transferred when a variant is assigned to a placeholder.</p>
         <h3>Assigning a variant</h3>
         <p>Any product attributes attached to the variant are transferred to the placeholder. Any attributes that were already assigned to the placeholder but do not conflict with the variant attributes (i.e. single-select families that the variant already had assigned) remain on the placeholder and are transferred to the variant.</p>
