--- a/Content/Topics/Attribute Management/Working with attribute sets.htm
+++ b/Content/Topics/Attribute Management/Working with attribute sets.htm
@@ -5,12 +5,11 @@
     <body>
         <h1>Working with attribute sets</h1>
         <p>Attribute sets define a list of attribute families that are applicable to the set. This function allows users to default a set of attribute families to a product hierarchy level so that each product in that hierarchy level is eligible to receive the attribute values in question or default certain attribute values if necessary.</p>
-        <p>These sets can be used to define attribute values that are only applicable to certain products in the appropriate hierarchy such as sleeve length which may only be applicable to shirts and not to shoe categories.</p>
+        <p>These sets can be used to define attribute values that are only applicable to certain products in the appropriate hierarchy such as sleeve length which only applies to shirts and not to shoes. </p>
         <p>
             <img src="../../Resources/Images/Attribute Management/Attribute Sets.png" class="LargeImages" />
         </p>
         <h2>Creating attribute sets</h2>
-        <p>To create an attribute set:</p>
         <ol>
             <li>Navigate to the <span class="Emphasis">Attribute Sets</span> tab within the <span class="Emphasis">Attribute Management</span> module.</li>
             <li>Select an entity type and a hierarchy level.</li>
