--- a/Content/Topics/Campaigns and Events/Campaigns.htm
+++ b/Content/Topics/Campaigns and Events/Campaigns.htm
@@ -5,16 +5,16 @@
     </head>
     <body>
         <h1>Campaigns</h1>
-        <p>A Campaign is a coordinated series of Events (promotional vehicles) with a single idea or theme. Campaigns have a start and end date which must encompass the Events’ Ad and Sale Start and End Dates created within it.</p>
+        <p>A campaign is a coordinated series of events (promotional vehicles) with a single idea or theme. Campaigns have a start and end date which must encompass the events’ Ad and Sale Start and End Dates created within it.</p>
         <p>
             <img src="../../Resources/Images/Events/Gantt View.png" class="LargeImages" />
         </p>
-        <h2>Creating Campaigns</h2>
-        <p> To create a new Campaign, click the <span class="Emphasis">New</span> button to display the <span class="Emphasis">Create New Campaign</span> window. Enter the required fields and click <span class="Emphasis">Ok</span>.</p>
+        <h2>Creating campaigns</h2>
+        <p> To create a new campaign, click the <span class="Emphasis">New</span> button to display the <span class="Emphasis">Create New Campaign</span> window. Enter the required fields and click <span class="Emphasis">Ok</span>.</p>
         <p>
             <img src="../../Resources/Images/Events/Create a Campaign.png" class="LargeImages" />
         </p>
-        <p class="BasicNote">The ability to create Campaigns depends on assigned rights.</p>
+        <p class="BasicNote">The ability to create campaigns depends on assigned rights.</p>
         <table style="mc-table-style: url('../../Resources/TableStyles/standard.css');" class="TableStyle-standard" cellspacing="0">
             <thead>
                 <tr class="TableStyle-standard-Head-Header1">
@@ -26,25 +26,25 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
                        Campaign Name                     </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The Campaign name
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The campaign name
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
                       Start Date                     </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The default start date and time. This can be set to the Campaign start date and time.
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The default start date and time. This can be set to the campaign start date and time.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
                        End Date                     </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The default end date and time. This can be set to the Campaign end date and time.
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The default end date and time. This can be set to the campaign end date and time.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
                        Description </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">A optional summary of the Campaign.
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">A optional summary of the campaign.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -56,29 +56,29 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
                         Budget </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">(Optional) The allocated budget for the Campaign.
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">(Optional) The allocated budget for the campaign.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
                        Color
                     </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The default color to help identify the Campaign in the Calendar view.
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The default color to help identify the campaign in the Calendar view.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">
                        Owner Name                     </td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">
-                        The user creating the Campaign.
+                        The user creating the campaign.
                     </td>
                 </tr>
             </tbody>
         </table>
         <h2>Modifying Campaigns</h2>
-        <p class="BasicNote">Campaign start and end dates must encompass all associated Event start and end sale dates.</p>
+        <p class="BasicNote">Campaign start and end dates must encompass all associated event start and end sale dates.</p>
         <ol>
-            <li>Select a Campaign.</li>
+            <li>Select a campaign.</li>
             <li>Click the <span class="Emphasis">Edit</span> icon.</li>
             <li>Make the necessary changes.</li>
             <li>Click <span class="Emphasis">Ok</span>. </li>
@@ -86,11 +86,11 @@
         <h2>Deleting campaigns</h2>
         <p> Campaigns can be deleted from the List or Calendar views. </p>
         <ol>
-            <li>Select a Campaign.</li>
+            <li>Select a campaign.</li>
             <li>Click <span class="Emphasis">Delete</span>.</li>
             <li>Select <span class="Emphasis">Yes</span> to confirm.</li>
             <li>Click <span class="Emphasis">Ok</span>.</li>
         </ol>
-        <p class="BasicNote"> If a Campaign has Events associated with it, then the Events are also deleted.</p>
+        <p class="BasicNote"> Any events associated to the campaign are also deleted. </p>
     </body>
 </html>
