--- a/Content/Topics/Campaigns and Events/Versioning Process.htm
+++ b/Content/Topics/Campaigns and Events/Versioning Process.htm
@@ -4,20 +4,20 @@
     </head>
     <body>
         <h1>Versioning process</h1>
-        <p>Versioning can occur at many steps along the way to completing an advertising Event. Versioning is the association of a set of information (such as Promotion Strategy, price, copy, and images) to one or more sites while associating different information to other sites. </p>
-        <p>A Price Cluster is a grouping of sites for the purposes of promotional price versioning. A site may only belong to one Price Cluster in a Price Cluster Set. </p>
+        <p>Versioning can occur at many steps along the way to completing an advertising Event. Versioning is the association of a set of information (such as strategy, price, copy, and images) to one or more sites while associating different information to other sites. </p>
+        <p>A Price Cluster is a grouping of sites for the purposes of promotional price versioning. A site may only belong to one cluster in a Price Cluster set. </p>
         <p>A Geography is a grouping of sites for the purposes of shared message versioning. A site can belong to more than one geography (distribution point) allowing retailers to tailor content to distributions based on language, images used, or adjusted wording to better target customer segments receiving the distributed version of the event. </p>
-        <p>Promotions can be versioned at the Price Cluster level to specify different Promotion Strategies or pricing. </p>
-        <p>Event slots can be versioned to display a different Promotion for specified geographies. </p>
-        <p> Whether added to an Event or not, all Promotions can have content versions that specify copy and images assigned to geographies.</p>
+        <p>Promotions can be versioned at the Price Cluster level to specify different promotion strategies or pricing. </p>
+        <p>Event slots can be versioned to display a different promotion for specified geographies. </p>
+        <p> Whether added to an Event or not, all promotions can have content versions that specify copy and images assigned to geographies.</p>
         <p class="BasicNote"> Versioning is optional.</p>
         <h2>Promotion versioning</h2>
-        <p>At the Promotion level, users can alter the product mix, Promotion Strategy and pricing for each associated Price Cluster. In addition, Promotion content, copy and images, can be unique for each content version.</p>
+        <p>At the Promotion level, users can alter the product mix, strategy and pricing for each associated Price Cluster. In addition, content, copy and images, can be unique for each content version.</p>
         <h2>Event slot versioning</h2>
-        <p>When a Promotion is placed in an advertised slot of an Event slot set, it is possible to assign the Promotion to all or some of the Event geographies. This allows for the assignment of alternative Promotions to the slot for remaining geographies thereby creating a regional product version. A geography can only be associated to one Promotion in a slot. Geographies are linked to Promotion Price Clusters through their respective site assignments. </p>
+        <p>When a promotion is placed in an advertised slot of an Event slot set, it is possible to assign the promotion to all or some of the Event geographies. This allows for the assignment of alternative promotions to the slot for remaining geographies thereby creating a regional product version. A geography can only be associated to one promotion in a slot. Geographies are linked to Promotion Price Clusters through their respective site assignments. </p>
         <h2>Content versioning</h2>
-        <p>After a Promotion is placed in an Event slot, the Promotion’s content is copied to create an Event content instance that is specific to the slot the Promotion was placed in. As with Promotions, Event content (both copy and images) can be unique for each content version. </p>
-        <p>Content versions are linked to geographies. It is possible to associate a geography to more than one content version. For example, a geography may require that content be provided in both English and French.</p>
+        <p>After a promotion is placed in an Event slot, its content is copied to create an Event content instance that is specific to the slot the promotion was placed in. As with promotions, Event content (both copy and images) can be unique for each content version. </p>
+        <p>Content versions are linked to geographies. It is possible to associate a geography to more than one content version. For example, a geography may require that content be provided in multiple languages.</p>
         <h2>Event versioning</h2>
         <p>The geography in the Event represents a single message that describes all the Promotions assigned to it within the Event (the Event slot sets). Performed at the slot set level, versioning compares the message for each geography and identifies the true set of distinct messages or Event versions.</p>
         <p>Calculating Event versions is a two-step process in which each slot set is first broken down into Base (color) versions according to image assignments and any non-black copy, price, or Promotion attribute values. After which, each Base version is further broken down into additional Plate (black) versions. The result is a distinct set of content data by slot set and slot needed to create a complete Composition that is applicable to one or more geographies.</p>
