--- a/Content/Topics/Price Planning/Cloning Price Actions.htm
+++ b/Content/Topics/Price Planning/Cloning Price Actions.htm
@@ -4,7 +4,7 @@
         <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <h1>Cloning Price Actions</h1>
+        <h1>Cloning price actions</h1>
         <ol>
             <li>
                 <p>Click <span class="Emphasis">Clone</span> to display the <span class="Emphasis">Clone Price Action</span> dialog.</p>
