--- a/Content/Topics/Price Planning/Creating Price Actions.htm
+++ b/Content/Topics/Price Planning/Creating Price Actions.htm
@@ -4,7 +4,7 @@
         <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <h1>Creating Price Actions</h1>
+        <h1>Creating price actions</h1>
         <p>Within Price Manager, navigate to the <span class="Emphasis">Actions</span> tab in a Pricing Plan. The <span class="Emphasis">Actions</span> tab is next to the <span class="Emphasis">Information</span> tab:</p>
         <ol>
             <li>Click <span class="Emphasis">New</span>.</li>
