--- a/Content/Topics/Price Planning/Editing price actions.htm
+++ b/Content/Topics/Price Planning/Editing price actions.htm
@@ -59,10 +59,10 @@
         <p>Once a price action has been configured, click <span class="Emphasis">Calculate</span> to execute the Price Strategy’s configured prioritized calculations and validations, which are run at the lowest level, and displayed as a minimum and maximum in the Price Action Summary grid. </p>
         <p>If there are any differences in entered variable information the <span class="Emphasis">Exception</span> checkbox is marked for easy identification. To view lower level calculated pricing information, click <span class="Emphasis">Detail</span> for the appropriate Variant details.</p>
         <p class="BasicNote"> A price action cannot be edited while it is being calculated and validated by the system.</p>
-        <h2>Applying Price Matrixes to Clusters in a Price Action</h2>
-        <p>A Price Matrix can be applied to all the Clusters in a Price Action. To apply a Price Matrix, select the checkbox in the <span class="Emphasis">Apply Matrix To All</span> field in the <span class="Emphasis">Clusters</span> grid.</p>
-        <p>If a Price Matrix is applied to all the Clusters in a Price Action, then values that are not percents in all the other&#160;Clusters within the Price Action use the foreign currency equivalent from the exchange matrix that was imported into <span class="Emphasis">Price Point Matrix</span> module. For example, if the chosen Cluster is priced in Belgium/EUR at 4.99, then a second Cluster priced in Canada/USD updates to 6.00. (See following screenshot.)</p>
-        <p class="BasicNote">If the variable is a percent value, then the percent value applies as is to all sibling Clusters.</p>
+        <h2>Applying price matrixes to clusters in price actions</h2>
+        <p>A price matrix can be applied to all the clusters in a price action. To apply a price matrix, select the checkbox in the <span class="Emphasis">Apply Matrix To All</span> field in the <span class="Emphasis">Clusters</span> grid.</p>
+        <p>If a price matrix is applied to all the clusters in a price action, then values that are not percents in all the other&#160;clusters within the price action use the foreign currency equivalent from the exchange matrix that was imported into <span class="Emphasis">Price Point Matrix</span> module. For example, if the chosen cluster is priced in Belgium/EUR at 4.99, then a second cluster priced in Canada/USD updates to 6.00. (See following screenshot.)</p>
+        <p class="BasicNote">If the variable is a percent value, then the percent value applies as is to all sibling clusters.</p>
         <h4>The Price Point exchange matrix</h4>
         <p>
             <img src="../../Resources/Images/Price Matrix/Price Matrix screen with selections.png" class="LargeImages" />
