--- a/Content/Topics/Users/Workload Queue User Rights.htm
+++ b/Content/Topics/Users/Workload Queue User Rights.htm
@@ -18,8 +18,7 @@
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
                          Allow Access to Workload Queue Module 
                     </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Enables the <span class="Emphasis">Workload Queue</span> icon on the Maintenance tab. 
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">Displays the <span class="Emphasis">Workload Queue</span> icon on the Maintenance tab. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -27,7 +26,7 @@
                          Allow Job Reprioritization and Removal 
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Change a batch’s prioritization and removal from the Active list to be processed. 
+                        Enable the ability to change a batch’s prioritization and removal from the Active list to be processed. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
