--- a/Content/Topics/Assortment Planning/Assortment Upcoming Commitments Report.htm
+++ b/Content/Topics/Assortment Planning/Assortment Upcoming Commitments Report.htm
@@ -9,7 +9,7 @@
             <img src="../../Resources/Images/Assortment Planning/Assortment Upcoming Commitments Report.png" class="LargeImages" />
         </p>
         <h2>Tracking created commitment orders</h2>
-        <p>This report is essential to keeping track of created commitment orders and ensuring that the activities required to provide sufficient information to suppliers are completed on-time, thus ensuring on-time delivery of products. </p>
+        <p>This report is essential to keeping track of created commitment orders and ensuring that the activities required to provide sufficient information to suppliers are completed on time, thus ensuring on time delivery of products. </p>
         <p>Efficient use of this report involves setting the <span class="Emphasis">Window of Time</span> parameter to include a period from the current week to a number of weeks out based on how long ordering activities such as Break By Size and Prepack analysis normally take. </p>
         <p>If managerial approvals are required in an organization prior to submitting orders, then the <span class="Emphasis">Window of Time</span> parameter selected should be increased to include the amount of time anticipated for review and any required changes.</p>
         <h2>Parameters</h2>
@@ -26,7 +26,7 @@
         </ul>
         <p>Order documents are returned based on associated milestone due dates that fall within the selected window. Multiple future due dates can exist for an order but if any of them fall within the selection then the due date displayed is the one nearest to the current date.</p>
         <ul>
-            <li><span class="Emphasis">Display Currency</span>: Sets the currency to display for all revenue based fields in the view. Defaults to the Home Currency for the active Assortment Plan.</li>
+            <li><span class="Emphasis">Display Currency</span>: Sets the currency to display for all revenue based fields in the view. Defaults to the Home currency for the active Assortment Plan.</li>
         </ul>
         <h2>Fields</h2>
         <p>Clicking <span class="Emphasis">Execute</span> returns the following read-only columns once the parameters have been set:</p>
@@ -40,9 +40,9 @@
             <li><span class="Emphasis">Order Created</span>: Whether a commitment order has been created for the corresponding receipt.</li>
             <li><span class="Emphasis">Order Date</span>: The date the corresponding order document was created. Set to the Due Date if no order has been created.</li>
             <li><span class="Emphasis">Delivery Date</span>: The date the corresponding order is due for delivery.</li>
-            <li><span class="Emphasis">Required Action</span>: The nearest milestone based on the assigned workflow that is due within the selected Window of Time for the corresponding order.</li>
+            <li><span class="Emphasis">Required Action</span>: The nearest milestone based on the assigned work flow that is due within the selected Window of Time for the corresponding order.</li>
             <li>
-                <p><span class="Emphasis">Due Date</span>: The date the corresponding Required Action is due based on the workflow assigned to the order document. For receipts without created commitments, based on the Default Lead Time Days of the corresponding product.</p>
+                <p><span class="Emphasis">Due Date</span>: The date the corresponding Required Action is due based on the work flow assigned to the order document. For receipts without created commitments, based on the Default Lead Time Days of the corresponding product.</p>
                 <p class="BasicNote">Due dates that are in the past are conditionally formatted for easy identification. This does not mean the listed Required Action can no longer be completed. However, failure to meet milestones may adversely effect on-time delivery of orders.</p>
             </li>
             <p>
