--- a/Content/Topics/Filters/Creating a New Filter.htm
+++ b/Content/Topics/Filters/Creating a New Filter.htm
@@ -4,7 +4,7 @@
         <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
-        <h1>Creating a new filter</h1>
+        <h1>Creating filters</h1>
         <p>New filters are created using the <span class="Emphasis">Filters</span> module and wherever filters can be selected in other modules. The process is the same except that an Entity type must be selected when creating filters in the <span class="Emphasis">Filters</span> module.</p>
         <p>When creating filters in other modules, the entity type is pre-defined based on the current context. For example, when creating a new filter in the Supplier module, the Entity type is pre-defined as <span class="Emphasis">Supplier</span>.</p>
         <h2>Creating filters in the Filters module</h2>
