--- a/Content/Topics/Filters/Editing a Filter.htm
+++ b/Content/Topics/Filters/Editing a Filter.htm
@@ -4,7 +4,7 @@
         <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
-        <h1>Editing a filter</h1>
+        <h1>Updating filters</h1>
         <p>A filter’s details, criteria, and conditions are editable.</p>
         <h2>To edit a filter</h2>
         <ol>
