--- a/Content/Topics/Filters/Maintain Filters window.htm
+++ b/Content/Topics/Filters/Maintain Filters window.htm
@@ -26,21 +26,19 @@
             </thead>
             <tbody>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1"> <MadCap:xref href="Creating a New Filter.htm">Creating a new filter</MadCap:xref></td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Creates a new filter.
-						<p>Select  <span class="Emphasis">Clone From Existing Filter</span> to create a copy of an existing filter. </p></td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"> Create A New Filter</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">See, <MadCap:xref href="Creating a New Filter.htm">Creating a new filter.</MadCap:xref><![CDATA[
+						]]><p>Select  <span class="Emphasis">Clone From Existing Filter</span> to create a copy of an existing filter. </p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1"> <MadCap:xref href="Editing a Filter.htm">Editing a filter</MadCap:xref></td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"> Update The Following Filter</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                         Opens the filter selected in the Filter list for editing.
-                    </td>
+See, <MadCap:xref href="Editing a Filter.htm">Updating filters</MadCap:xref>.                   </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        Delete filters
-                    </td>
+                        Delete The Following Filter(s)<![CDATA[                    ]]></td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                         Deletes the selected filters.</td>
                 </tr>
