--- a/Content/Topics/Filters/Filters Overview.htm
+++ b/Content/Topics/Filters/Filters Overview.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Filters Overview</h1>
-        <p>Filters display only the subsets of data to be worked on in a given screen (or that the system works with in a given process). Filters can be as simple or as complex as needed and then saved for future use. Once created, they can be shared across the entire organization, with select others, or kept for private use.&#160;&#160; </p>
+        <p>Filters display only the subsets of data to be worked on in a given screen (or that TG JE works with in a given process). Filters can be as simple or as complex as needed and then saved for future use. Once created, they can be shared across the entire organization, with select others, or kept for private use.&#160;&#160; </p>
         <h2>Flexibility</h2>
         <p>Filters are extremely flexible and are able to support:</p>
         <ul>
@@ -13,7 +13,7 @@
             <li><span class="Emphasis">Static conditions</span>: the conditions used to filter data cannot change, but the data displayed can change ensuring that the data is current.&#160; </li>
             <li><span class="Emphasis">Dynamic conditions</span>: users select the condition values used to filter data ensuring the filter is relevant to their current needs.</li>
         </ul>
-        <h2>Entity-specific filtering</h2>
+        <h2>Entity specific filtering</h2>
         <p>Because different modules involve different data entities (such as suppliers, inventory, and sites), the available filters apply to the relevant entity. </p>
         <p class="Example">In the Suppliers screen, there is a list of available supplier filters as opposed to a mix of supplier, inventory, and site filters. </p>
         <h2>Creating filter groups</h2>
