--- a/Content/Topics/Cluster Site Manager/Clustering Algorithms.htm
+++ b/Content/Topics/Cluster Site Manager/Clustering Algorithms.htm
@@ -25,7 +25,7 @@
             </ul>
         </div>
         <p class="p">When finished, consider the following questions before creating the ideal cluster sets:</p>
-        <h2>At what level of a business is there the greatest variation in performance among stores? </h2>
+        <h2>At what business level is there the greatest variation in performance among stores? </h2>
         <p>To answer this question, analyze how stores rank with selected criteria at multiple levels.</p>
         <ol>
             <li>Create several groups of cluster sets. Start as high as the total company for all products and stores, and build out groups  to the lowest proposed level. Use the same classification and attribute settings for each group.</li>
@@ -38,7 +38,7 @@
                 <li>Calculate the number of deviations in classification assignment from the top level, by store, for each cluster set level, and compare each level by sum or average deviations to identify the level at which additional complexity ceases to cause significant increase.<p class="Caution">When using the sum of deviations by level, depending on the nature of the underlying data used in calculation of  cluster sets, the tendency is for lower levels to yield greater sums because of the increase in the number of cluster sets.</p></li>
             </ul>
         </ol>
-        <h2>Can the organization handle planning at this level of detail without significant impact to current ordering time lines?</h2>
+        <h2>Can organizations handle planning at this level of detail without significant impact to current ordering time lines?</h2>
         <p>Can the team realistically support analyzing at that level of detail. The number of proposed cluster sets should be grouped into areas that could be managed by a single individual. </p>
         <p>If this number is greater than the number of people on the team, weigh the perceived benefit of planning at the proposed level against the cost of hiring more personnel. </p>
         <p>If the cost of changing the team to suit the greater level of detail is greater than the expected return, compromise by examining the other levels and identifying one that is feasible.</p>
