--- a/Content/Topics/Release Notes/Site Manager.htm
+++ b/Content/Topics/Release Notes/Site Manager.htm
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1>Site Manager </h1>
+        <p>Improvements have been made to Site Manager to support Lookup Attributes and bring it in line with supported Variant Manager functionality.</p>
     </body>
 </html>
