--- a/Content/Topics/Release Notes/Target Choice Count.htm
+++ b/Content/Topics/Release Notes/Target Choice Count.htm
@@ -58,6 +58,7 @@
                 </tr>
             </tbody>
         </table>
+        <p class="BasicNote">The same fields appear on the <span class="Emphasis">Target Choices By Update</span> view which is launched by selecting the <span class="Emphasis">View Choices By Update</span> option on the toolbar. Some fields are hidden by default.</p>
         <p>The number of periods in a scenario that contain updates is limited to 53 weeks.  If users try to add updates on a scenario with a larger window of time, the following message displays and updates are not created.</p>
         <p>
             <img src="../../Resources/Images/Target Choice Count/Updates 53 Period Limit.png" class="LargeImages" />
