--- a/Content/Topics/Site Manager/Global Site Priority.htm
+++ b/Content/Topics/Site Manager/Global Site Priority.htm
@@ -31,12 +31,10 @@
                 <p>Select a site in the grid. </p>
                 <p>The <span class="Emphasis">Details</span> pane displays.</p>
             </li>
-            <li>Click the <span class="Emphasis">Global Site Priority</span> blade.</li>
+            <li>Click the <span class="Emphasis">Global Site Priority</span> blade.
+				<p><img src="../../Resources/Images/Site Manager/Global and Group Priority Grid.png" class="LargeImages" /></p></li>
             <li>
                 <p>In the <span class="Emphasis">Global and Group Priority</span> grid, locate the site to be updated and change its Global Priority value.</p>
-                <p>
-                    <img src="../../Resources/Images/Site Manager/Global and Group Priority Grid.png" class="LargeImages" />
-                </p>
             </li>
             <li>
                 <p>Click the <span class="Emphasis">Save</span> button on the <span class="Emphasis">Global and Group Priority</span> toolbar.</p>
